# HandwrittenOCR

./: .gitignore  Dockerfile  LICENSE.md  README.md   docker-compose.yml
.devcontainer/: devcontainer.json
backend/src/: app.py
ocr_module/: CMakeLists.txt
ocr_module/cmake/modules/: FindTesseract.cmake
ocr_module/src/: ocr.cpp
